--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,12 +1,7 @@
-# Default NAMESPACE created by R
-# Remove the previous line if you edit this file
-
 # Export all names
 exportPattern(".")
 
-# Import all packages listed as Imports or Depends
-import(
-  Rcmdr,
-  tcltk,
-  depthTools
-)
+# Imports 
+import(Rcmdr,depthTools)
+
+importFrom(tcltk)
