--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: RcmdrPlugin.depthTools
 Type: Package
 Title: R commander Depth Tools Plug-In
-Version: 1.1
-Date: 2013-01-30
+Version: 1.2
+Date: 2013-02-14
 Author: Sara Lopez-Pintado <sl2929@columbia.edu> and Aurora Torrente
         <etorrent@est-econ.uc3m.es>.
 Maintainer: Aurora Torrente <etorrent@est-econ.uc3m.es>
@@ -17,6 +17,7 @@ Description: This package provides an Rcmdr plug-in based on the
         and two methods of supervised classification techniques, the DS
         and TAD methods.
 License: GPL (>= 2)
-Packaged: 2013-02-06 08:59:45 UTC; migueltardio
+Packaged: 2013-02-11 14:58:15 UTC; migueltardio
+NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2013-02-06 11:07:29
+Date/Publication: 2013-04-03 16:03:39
